# c-icap-ruby

./: AUTHORS  Makefile.am  Makefile.in  README.md  aclocal.m4  autoconf.h.in  configure  configure.ac
examples/: icap.rb  icap_service.rb
modules/: Makefile.am  Makefile.in  ruby_handler.c
patches/: ruby_bind_stack_1.9.2p0.patch
